# sgf-model

./: .gitignore  app.py  pyproject.toml
docs/: architecture-plan.md  data-audit.md  holdout.md  phase0-baseline.md  phase0_baseline.csv  phase0_baseline_avg.csv  phase1-results.md  phase1_comparison.csv  phase1_comparison_v2.csv  phase1_full.csv  phase1_full_v2.csv  phase2-results.md  phase2_comparison.csv  phase2_full.csv  phase3-results.md  phase4-career-calibration.md  phase4-retirement-fix.md  phase4_career_calibration_full.csv  phase4_career_calibration_summary.csv  phase5-routes-features.md  phase6-rookies.md  phase7-career-direct.md
src/sgf_model/: __init__.py
src/sgf_model/cli/: __init__.py  main.py  pipeline.py
src/sgf_model/curves/: __init__.py  age_curves.py
src/sgf_model/data/: __init__.py  loaders.py
src/sgf_model/evaluation/: __init__.py  backtest.py  career_backtest.py  career_calibration.py
src/sgf_model/features/: __init__.py  advanced.py  builder.py
src/sgf_model/models/: __init__.py  quantile_fp.py
src/sgf_model/projections/: __init__.py  player.py  regression.py  rookie.py  team.py
src/sgf_model/scoring/: __init__.py  config.py  score.py
src/sgf_model/simulation/: __init__.py  career.py  career_target.py
src/sgf_model/storage/: __init__.py  base.py  factory.py  file.py  mongo.py
src/sgf_model/valuation/: __init__.py  league.py  valuation.py
