[project]
name = "sgf-model"
version = "0.1.0"
description = "Dynasty fantasy football valuation: top-down quantile FP model + Monte Carlo career VORP."
authors = [
    { name = "Harry Holcomb", email = "31421567+holcombharry@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nflreadpy>=0.1.5",
    "polars>=1.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "pymongo>=4.0",
    "scikit-learn>=1.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "ipykernel>=6",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
